Prevent Groovy illegal access warnings
Start all processes that are likely to use Groovy with the
necessary --add-opens arguments to avoid noisy warnings that
our users can't do anything about.